# Ananta

./: .env.example  .gitignore  .npmrc  .prettierrc.json  Ananta_3D_Strategy.html  Ananta_AI_Architecture.html  Ananta_Admin_Panel.html  Ananta_Bootstrap_Plan.html  Ananta_Landing.html  Ananta_Landing_3D.html  Ananta_Live_Class.html  Ananta_Live_Class_Social.html  Ananta_Parent_Dashboard.html  Ananta_Post_Class.html  Ananta_Stack_Decisions.html  Ananta_Student_Dashboard.html  Ananta_Student_Profile.html  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  build_pdf.py  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/ai-worker/: .env.example  .gitignore  README.md  pyproject.toml
apps/ai-worker/src/: __init__.py  celery_app.py  config.py  db.py  embeddings.py  llm.py  logging.py  main.py  rag.py  tasks.py
apps/ai-worker/src/personas/: adhvara.yaml  loader.py  praketa.yaml  vihaan.yaml
apps/ai-worker/src/routes/: __init__.py  doubts.py  generation.py  health.py  tts.py
apps/ai-worker/src/services/: __init__.py  doubts.py  memory_cards.py  notes_gen.py  quiz_gen.py  tts.py
apps/api/: .env.example  README.md  package.json  tsconfig.json  vitest.config.ts
apps/web/: .env.example  .gitignore  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
infra/: DEPLOY.md  docker-compose.prod.yml  docker-compose.yml  livekit.prod.yaml  livekit.yaml  postgres-init.sql  prod.env.example  smoke-test.sh
infra/cloudflare/: tunnel.example.yml
infra/docker/: ai-worker.Dockerfile  api.Dockerfile  (+1 more)
(+65 files in other folders)
