[project]
name = "ananta-ai-worker"
version = "0.1.0"
description = "Ananta — FastAPI + Celery AI worker (RAG, lesson gen, TTS)"
authors = [{ name = "priyanka", email = "priyankauru5@gmail.com" }]
license = { text = "Proprietary" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.2",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.2.3",
    "sqlalchemy>=2.0.35",
    "celery[redis]>=5.4.0",
    "redis>=5.1.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "groq>=0.11.0",
    "openai>=1.50.2",
    "sentence-transformers>=3.1.1",
    "numpy>=1.26.4",
    "pgvector>=0.3.4",
    "loguru>=0.7.2",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "black>=24.8.0",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
